legyen benne egy gomb amivel mobil telefonon elehet meneteni a névjegyek közé
Természetesen, hozzáadok egy gombot, amivel mobil telefonon el lehet menteni a névjegyet a kapcsolatok közé. Ehhez a vCard formátumot fogjuk használni, amit a legtöbb mobil eszköz támogat. Íme a frissített kód:
Ebben a frissített verzióban a következő változtatásokat tettem:

Hozzáadtam egy "Mentés a névjegyzékbe" gombot a kártya aljára.
A gomb valójában egy linkként működik, amely egy vCard formátumú adatot tartalmaz.
A link "download" attribútuma biztosítja, hogy a fájl letöltődjön "contact.vcf" néven.
A CSS-ben hozzáadtam egy új stílust a gombhoz, hogy vonzóbb legyen.

Amikor a felhasználó rákattint erre a gombra mobil eszközön, a telefon felajánlja a névjegy mentését a kapcsolatok közé. A legtöbb modern mobil böngésző és operációs rendszer támogatja ezt a funkciót.
Ne felejtse el, hogy a valós használathoz személyre kell szabnia az adatokat a vCard-ban és a névjegykártya megjelenített részein is.
Szeretné, ha tovább fejleszteném vagy módosítanám valamit ezen a kódon?

--- a/index.html
+++ b/index.html
@@ -36,6 +36,19 @@
             font-size: 14px;
             margin-bottom: 5px;
         }
+        .save-button {
+            background-color: #4CAF50;
+            border: none;
+            color: white;
+            padding: 10px 20px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin-top: 20px;
+            cursor: pointer;
+            border-radius: 5px;
+        }
     </style>
 </head>
 <body>
@@ -45,6 +58,7 @@
         <div class="contact">Email: pelda@email.com</div>
         <div class="contact">Telefon: +36 1 234 5678</div>
         <div class="contact">Weboldal: www.peldaweboldal.hu</div>
+        <a href="data:text/vcard;charset=UTF-8,BEGIN:VCARD%0AVERSION:3.0%0AFN:Az Ön Neve%0AN:Név;Az Ön%0ATITLE:Pozíció%0AEMAIL:pelda@email.com%0ATEL:+36 1 234 5678%0AURL:www.peldaweboldal.hu%0AEND:VCARD" download="contact.vcf" class="save-button">Mentés a névjegyzékbe</a>
     </div>
 </body>
 </html>
