--- a/index.html
+++ b/index.html
@@ -5,59 +5,96 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Okos Névjegykártya</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
+        body, html {
             margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
             background-color: #f0f0f0;
+            height: 100%;
+        }
+        .container {
+            display: flex;
+            flex-direction: column;
+            min-height: 100%;
         }
         .card {
+            flex-grow: 1;
             background-color: white;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
             padding: 20px;
-            width: 300px;
-            text-align: center;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+        .profile-pic {
+            width: 120px;
+            height: 120px;
+            border-radius: 50%;
+            margin: 0 auto 20px;
+            display: block;
+            background-color: #ddd; /* Helyettesítő szín a profilképnek */
         }
         .name {
             font-size: 24px;
             font-weight: bold;
+            text-align: center;
             margin-bottom: 10px;
         }
         .title {
             font-size: 18px;
             color: #666;
+            text-align: center;
             margin-bottom: 20px;
         }
-        .contact {
-            font-size: 14px;
-            margin-bottom: 5px;
+        .contact-info {
+            margin-bottom: 20px;
+        }
+        .contact-item {
+            display: flex;
+            align-items: center;
+            margin-bottom: 10px;
+            font-size: 16px;
+        }
+        .icon {
+            width: 20px;
+            margin-right: 10px;
+            text-align: center;
         }
         .save-button {
             background-color: #4CAF50;
             border: none;
             color: white;
-            padding: 10px 20px;
+            padding: 15px 20px;
             text-align: center;
             text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            margin-top: 20px;
+            display: block;
+            font-size: 18px;
+            margin: 20px auto;
             cursor: pointer;
             border-radius: 5px;
+            width: 100%;
+            max-width: 300px;
         }
     </style>
 </head>
 <body>
-    <div class="card">
-        <div class="name">Az Ön Neve</div>
-        <div class="title">Pozíció</div>
-        <div class="contact">Email: pelda@email.com</div>
-        <div class="contact">Telefon: +36 1 234 5678</div>
-        <div class="contact">Weboldal: www.peldaweboldal.hu</div>
+    <div class="container">
+        <div class="card">
+            <div class="profile-pic"></div>
+            <div class="name">Az Ön Neve</div>
+            <div class="title">Pozíció</div>
+            <div class="contact-info">
+                <div class="contact-item">
+                    <span class="icon">📧</span>
+                    <span>pelda@email.com</span>
+                </div>
+                <div class="contact-item">
+                    <span class="icon">📞</span>
+                    <span>+36 1 234 5678</span>
+                </div>
+                <div class="contact-item">
+                    <span class="icon">🌐</span>
+                    <span>www.peldaweboldal.hu</span>
+                </div>
+            </div>
+        </div>
         <a href="data:text/vcard;charset=UTF-8,BEGIN:VCARD%0AVERSION:3.0%0AFN:Az Ön Neve%0AN:Név;Az Ön%0ATITLE:Pozíció%0AEMAIL:pelda@email.com%0ATEL:+36 1 234 5678%0AURL:www.peldaweboldal.hu%0AEND:VCARD" download="contact.vcf" class="save-button">Mentés a névjegyzékbe</a>
     </div>
 </body>
