a hiavatkozások legyenek kattintahóak
Természetesen, módosítom a kódot, hogy a hivatkozások kattinthatóak legyenek. Íme a frissített verzió:

A főbb változtatások:

Az e-mail címet most egy mailto: hivatkozás veszi körül, így kattintásra megnyílik az alapértelmezett e-mail kliens.
A telefonszámot egy tel: hivatkozás veszi körül, ami lehetővé teszi a közvetlen tárcsázást mobil eszközökön.
A weboldal címe most egy valódi hivatkozás, ami új lapon nyílik meg (target="_blank").
Hozzáadtam néhány CSS szabályt a hivatkozásokhoz, hogy alapértelmezetten ne legyenek aláhúzva, de az egér fölé vitelekor megjelenjen az aláhúzás.

Ezekkel a módosításokkal a névjegykártya interaktívabb lett, és a felhasználók könnyebben tudják használni a kapcsolatfelvételi lehetőségeket. A telefonszám és az e-mail cím különösen hasznos lesz mobileszközökön, ahol közvetlenül indíthatják a hívást vagy az e-mail írást.
Van esetleg további módosítás vagy fejlesztés, amit szeretne látni a kódban?

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             border-radius: 50%;
             margin: 0 auto 20px;
             display: block;
-            background-color: #ddd; /* Helyettesítő szín a profilképnek */
+            background-color: #ddd;
         }
         .name {
             font-size: 24px;
@@ -72,6 +72,13 @@
             width: 100%;
             max-width: 300px;
         }
+        a {
+            color: inherit;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
@@ -83,15 +90,15 @@
             <div class="contact-info">
                 <div class="contact-item">
                     <span class="icon">📧</span>
-                    <span>pelda@email.com</span>
+                    <a href="mailto:pelda@email.com">pelda@email.com</a>
                 </div>
                 <div class="contact-item">
                     <span class="icon">📞</span>
-                    <span>+36 1 234 5678</span>
+                    <a href="tel:+3612345678">+36 1 234 5678</a>
                 </div>
                 <div class="contact-item">
                     <span class="icon">🌐</span>
-                    <span>www.peldaweboldal.hu</span>
+                    <a href="http://www.peldaweboldal.hu" target="_blank">www.peldaweboldal.hu</a>
                 </div>
             </div>
         </div>
