--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             background-color: white;
             padding: 20px;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            text-align: center;
         }
         .profile-pic {
             width: 120px;
@@ -34,17 +35,17 @@
         .name {
             font-size: 24px;
             font-weight: bold;
-            text-align: center;
             margin-bottom: 10px;
         }
         .title {
             font-size: 18px;
             color: #666;
-            text-align: center;
             margin-bottom: 20px;
         }
         .contact-info {
             margin-bottom: 20px;
+            display: inline-block;
+            text-align: left;
         }
         .contact-item {
             display: flex;
