a betű méret legyen egy kicsit nagyobb
Természetesen, megnövelem a betűméretet. Íme a frissített kód a nagyobb betűméretekkel:

A főbb változtatások:

- Az alap betűméretet 18px-re növeltem a body-ban.
- A név betűméretét 32px-re növeltem.
- A pozíció betűméretét 24px-re növeltem.
- A kontakt információk betűméretét 20px-re növeltem.
- Az ikonok méretét 24px-re növeltem.
- A "Mentés a névjegyzékbe" gomb betűméretét 22px-re növeltem.
- Növeltem a térközöket (padding és margin) a nagyobb betűméretekhez igazodva.
- profilkép méretét is megnöveltem 150x150 pixelre.

Ezek a változtatások nagyobb, jobban olvasható szöveget eredményeznek, miközben megtartják az arányokat és az elrendezést. A névjegykártya most jobban alkalmazkodik a nagyobb betűméretekhez, és könnyebben olvasható lesz mobileszközökön is.
Van még valami, amit szeretne módosítani vagy finomítani a névjegykártyán?

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             font-family: Arial, sans-serif;
             background-color: #f0f0f0;
             height: 100%;
+            font-size: 18px; /* Alap betűméret növelése */
         }
         .container {
             display: flex;
@@ -20,58 +21,59 @@
         .card {
             flex-grow: 1;
             background-color: white;
-            padding: 20px;
+            padding: 30px; /* Növelt padding a nagyobb tartalomhoz */
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
             text-align: center;
         }
         .profile-pic {
-            width: 120px;
-            height: 120px;
+            width: 150px; /* Növelt méret */
+            height: 150px; /* Növelt méret */
             border-radius: 50%;
-            margin: 0 auto 20px;
+            margin: 0 auto 30px; /* Növelt alsó margó */
             display: block;
             background-color: #ddd;
         }
         .name {
-            font-size: 24px;
+            font-size: 32px; /* Növelt betűméret */
             font-weight: bold;
-            margin-bottom: 10px;
+            margin-bottom: 15px;
         }
         .title {
-            font-size: 18px;
+            font-size: 24px; /* Növelt betűméret */
             color: #666;
-            margin-bottom: 20px;
+            margin-bottom: 30px; /* Növelt margó */
         }
         .contact-info {
-            margin-bottom: 20px;
+            margin-bottom: 30px; /* Növelt margó */
             display: inline-block;
             text-align: left;
         }
         .contact-item {
             display: flex;
             align-items: center;
-            margin-bottom: 10px;
-            font-size: 16px;
+            margin-bottom: 15px; /* Növelt margó */
+            font-size: 20px; /* Növelt betűméret */
         }
         .icon {
-            width: 20px;
-            margin-right: 10px;
+            width: 30px; /* Növelt méret */
+            margin-right: 15px; /* Növelt margó */
             text-align: center;
+            font-size: 24px; /* Növelt ikonméret */
         }
         .save-button {
             background-color: #4CAF50;
             border: none;
             color: white;
-            padding: 15px 20px;
+            padding: 20px 25px; /* Növelt padding */
             text-align: center;
             text-decoration: none;
             display: block;
-            font-size: 18px;
-            margin: 20px auto;
+            font-size: 22px; /* Növelt betűméret */
+            margin: 30px auto; /* Növelt margó */
             cursor: pointer;
-            border-radius: 5px;
+            border-radius: 8px; /* Kissé növelt lekerekítés */
             width: 100%;
-            max-width: 300px;
+            max-width: 350px; /* Növelt maximális szélesség */
         }
         a {
             color: inherit;
